cilium-gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: web-gw
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway-ipv6
spec:
  gatewayClassName: cilium-ipv6
  listeners:
  - protocol: HTTP
    port: 80
    name: web-gw
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: signoz
spec:
  parentRefs:
  - name: public-gateway
    namespace: default
  - name: public-gateway-ipv6
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /observe
    backendRefs:
    - name: signoz
      namespace: platform
      port: 8080
  # - matches:
  #   - headers:
  #     - type: Exact
  #       name: magic
  #       value: foo
  #     queryParams:
  #     - type: Exact
  #       name: great
  #       value: example
  #     path:
  #       type: PathPrefix
  #       value: /
  #     method: GET
  #   backendRefs:
  #   - name: productpage
  #     port: 9080
